background color change

--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 body {
-    background: url("images/background.jpg") no-repeat center center fixed;
-    background-size: cover;
-    overflow: hidden;
+     background: #e23636 url("images/background.jpg") no-repeat center center fixed;
+     background-size: cover;
+     overflow: hidden;
+ }
+
+.wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .text {
@@ -10,10 +17,6 @@ body {
     text-align: center;
     color: snow;
     padding: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 h1 {
