--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
      background: #e23636 url("images/background.jpg") no-repeat center center fixed;
      background-size: cover;
      overflow: hidden;
+    min-height: 100%;
  }
 
 .wrapper {
