--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,10 @@ body {
      background: #e23636 no-repeat center center fixed;
      background-size: cover;
      overflow: hidden;
-     height: 100vh;
  }
 
- .particles-js {
-     height: 100%;
+ .full-height {
+     height: 100vh;
  }
 
 .wrapper {
